2010-06-24  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Property.cpp: add missing fclose, caused
	by botched conversion of fstream to stdio - thanks Gianluca
	Massera!

2010-06-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/stressTests/stress_name_server/stress_name_server.cpp:
	stress-test persistent connections.

	* src/yarpserver/src/Subscriber.h: fully implement persistent
	connections.

2010-06-21 Lorenzo Natale <lorenzo.natale@iit.it>
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.inl
    * src/libYARP_dev/src/RemoteControlBoard.cpp
    * src/libYARP_dev/src/ServerControlBoard.cpp
    * src/modules/fakebot/FakeBot.h
    
    Added getAmpStatus(int, int*)/getAmpStatusRaw() for single joint to interface.
    Fixed modules using it.


2010-06-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/BufferedPort.h: keep envelope
	information properly associated with queued messages
	(thanks Daniel Krieg)

	* src/libYARP_dev/src/DeviceGroup.cpp: remove unnecessary 
	polling if all devices within a group are backgrounded
	(thanks Philipp Robbel).

	* src/libYARP_OS/src/Terminator.cpp: make "Terminee" ports be
	just regular ports.  Network-compatible with previous terminator 
	protocol.  Give error for conflicting terminees (thanks
	Philipp Robbel).

2010-06-08  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpPlugin.cmake: improve internal documentation of
	plugin system

	* conf/FindGtkPlus.cmake: apply OSX patch from Gianluca Massera

	* conf/FindGthread.cmake: apply OSX patch from Gianluca Massera

2010-06-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* scripts/fetch-ace.sh: Change ACE configuration when bundled
	with YARP to facilitate compiling YARP with gcc (as opposed
	to g++).  The core yarp libraries and executables make