@@ -1,3 +1,8 @@
+2010-06-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/include/yarp/os/Port.h: add setTimeout flag
+	(thanks Stephane for prodding me into doing this).
+
 2010-06-24  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>
 
 	* src/libYARP_OS/src/Property.cpp: add missing fclose, caused
